[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "HiLoop"
version = "0.0.1"
description = "Toolbox for exploring high-feedback motifs in gene regulatory networks."
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.distutils.bdist_wheel]
universal = true